# Linux-Adminstration

./: README.md
Project/Part1/Q1/: Part1_Q1_Text.txt  userdef.sh
Project/Part1/Q2/: Part2_Q2_Text.txt  q2.sh  q2.tar
Project/Part1/Q2/q2/: hello.c  hello.h  main.c  main.h
Project/Part2/project_cmake/Applications/: CMakeLists.txt
Project/Part2/project_cmake/Modules/caesar_cipher/: CMakeLists.txt
Project/Part2/project_cmake/Modules/xor_cipher/: CMakeLists.txt
Project/Part2/project_make/Applications/: Makefile  output
Project/Part2/project_make/Modules/caesar_cipher/: caesar_cipher.mk
Project/Part2/project_make/Modules/xor_cipher/: xor_cipher.mk
Project/Part3/: a.out  app.c
